# pv2

./: .env.example  .gitignore  C4_MODEL_GUIDE.md  README.md  config.json  generate_diagrams.sh  grid_optimization_notes.md  passivbot.dsl  passivbot_c4.puml  pyproject.toml  run_dca_test.py  run_simple_dca_test.py  run_strategy_backtest.py  run_strategy_test.py  simple_simulator_test.py  test_phase1.py
docs/: PHASE1_COMPLETE.md
docs/diagrams/: 01_system_architecture.md  02_bot_lifecycle.md  03_configuration_system.md  04_exchange_layer.md  05_grid_strategy.md  06_dca_strategy.md  07_risk_management.md  08_data_models.md  ARCHITECTURE.md  C4_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  c4_diagrams.html  diagrams.html  index.md
src/passivbot/: __init__.py  cli.py
src/passivbot/core/: config.py  exceptions.py  types.py
src/passivbot/exchanges/: __init__.py  base.py  binance.py  bybit.py  simulator.py
src/passivbot/strategies/: __init__.py  base.py  dca.py  grid.py
